# rayt

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
config/: basic.yaml  cornell_box.yaml  cornell_metal.yaml  cornell_smoke.yaml  cornell_sphere.yaml  cover.yaml  cover_with_checker.yaml  cover_with_motion_blur.yaml  next_week_final.yaml  perlin_demo.yaml  planets.yaml  simple_light.yaml  two_spheres_checker.yaml
src/: camera.rs  cli.rs  colouriser.rs  config.rs  data.rs  float.rs  generator.rs  imager.rs  io.rs  main.rs  materials.rs  onb.rs  renderer.rs  sampling.rs  view.rs  volumes.rs
src/data/: assets.rs  colour.rs  image.rs  mod.rs  vector.rs
src/pdf/: cosine.rs  geometry.rs  mixture.rs  mod.rs
src/scenes/: basic.rs  cornell_box.rs  cornell_metal.rs  cornell_smoke.rs  cornell_sphere.rs  cover.rs  mod.rs  next_week_final.rs  perlin.rs  planets.rs  simple_light.rs
src/volumes/: geometry.rs  materials.rs  mod.rs  volume.rs
src/world/: background.rs  entity.rs  geometry.rs  materials.rs  mod.rs  texture.rs
src/world/geometry/: axis_aligned_bounding_box.rs  bounding_volume_hierarchy.rs  cube.rs  flip_normals.rs  medium.rs  mod.rs  rectangle.rs  rotate.rs  sphere.rs  translate.rs
src/world/materials/: dielectric.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/world/texture/: mod.rs  perlin.rs
